# fifi_manual

./: CMakeLists.txt  README.md  fifiSoccerTeam  fifiman.cpp
Modulos/: Comunication.cpp  SerialPort.cpp  Socket.cpp
Modulos/include/: Comunication.h  FFtypes.h  SerialPort.h  Socket.h
interface/: mainFrame.cpp
interface/include/: mainFrame.h
